@@ -105,6 +105,7 @@ ISo= Ignat Soroko
 IZ = Ilya Zakharevich
 JD = Jeroen Demeyer
 JJ = John Jones
+JK = Julien Keuffer
 JM = Jerome Milan
 JS = Juhana Sadeharju
 KO = Kiyoshi Ohgishi
