@@ -334,47 +334,48 @@ construct algebra: [[x^3 - 21*x + 7, [[1], 1], [Mat(49), 1], Mat(27), [], []
 , 3; 0, 0, 9], [1, 0, 0, 0, 1, -1, 0, -1, 2; 0, 1, 0, 1, 1, 1, 0, 1, -1; 0, 
 0, 1, 0, 1, 0, 1, 0, 0]]]], [-1/3*x^2 - 2/3*x + 14/3, 1/3*x^2 - 1/3*x - 14/3
 ], Mod(-6, y), Vecsmall([0]), [[[2, [2]~, 1, 1, 1], [3, [3]~, 1, 1, 1], [7, 
-[7]~, 1, 1, 1]], Vecsmall([1, 2, 0])], 0, [1, 0, 0, 0, 0, 1/7, 0, 2/7, 6/7; 
-0, 1, 0, 0, 0, 1/7, 0, 1/7, 6/7; 0, 0, 1, 0, 0, 3/7, 0, 0, 4/7; 0, 0, 0, 1, 
-0, 5/7, 0, 2/7, 3/7; 0, 0, 0, 0, 1, 5/7, 0, 1/7, 3/7; 0, 0, 0, 0, 0, 1/7, 0,
+[7]~, 1, 1, 1]], Vecsmall([1, 2, 0])], 0, [1, 0, 0, 0, 0, 2/7, 0, 1/7, 6/7; 
+0, 1, 0, 0, 0, 2/7, 0, 4/7, 6/7; 0, 0, 1, 0, 0, 6/7, 0, 0, 4/7; 0, 0, 0, 1, 
+0, 5/7, 0, 4/7, 3/7; 0, 0, 0, 0, 1, 5/7, 0, 2/7, 3/7; 0, 0, 0, 0, 0, 1/7, 0,
  0, 2/7; 0, 0, 0, 0, 0, 0, 1, 2/7, 5/7; 0, 0, 0, 0, 0, 0, 0, 1/7, 5/7; 0, 0,
- 0, 0, 0, 0, 0, 0, 1/7], [1, 0, 0, 0, 0, -1, 0, -2, 6; 0, 1, 0, 0, 0, -1, 0,
- -1, 1; 0, 0, 1, 0, 0, -3, 0, 0, 2; 0, 0, 0, 1, 0, -5, 0, -2, 17; 0, 0, 0, 0
-, 1, -5, 0, -1, 12; 0, 0, 0, 0, 0, 7, 0, 0, -14; 0, 0, 0, 0, 0, 0, 1, -2, 5;
- 0, 0, 0, 0, 0, 0, 0, 7, -35; 0, 0, 0, 0, 0, 0, 0, 0, 7], [[1, 0, 0, 0, 0, 0
-, 0, 0, 0; 0, 1, 0, 0, 0, 0, 0, 0, 0; 0, 0, 1, 0, 0, 0, 0, 0, 0; 0, 0, 0, 1,
- 0, 0, 0, 0, 0; 0, 0, 0, 0, 1, 0, 0, 0, 0; 0, 0, 0, 0, 0, 1, 0, 0, 0; 0, 0, 
-0, 0, 0, 0, 1, 0, 0; 0, 0, 0, 0, 0, 0, 0, 1, 0; 0, 0, 0, 0, 0, 0, 0, 0, 1], 
-[0, 1, -1, 1, 1, 1, 6, 2, 4; 1, 1, 1, 1, 1, 2, 1, 1, 3; 0, 1, 0, 3, 3, 4, 2,
- 2, 4; 0, 0, 0, 6, 5, 7, 17, 7, 14; 0, 0, 0, 4, 4, 5, 12, 5, 10; 0, 0, 0, -7
-, -7, -9, -14, -7, -14; 0, 0, 0, 0, 0, 0, 5, 1, 2; 0, 0, 0, 0, 0, 0, -35, -9
-, -21; 0, 0, 0, 0, 0, 0, 7, 2, 5], [0, -1, 2, 0, -1, 0, -4, -2, -5; 0, 1, -1
-, 0, -1, -1, 0, 0, 0; 1, 0, 0, 0, -3, -2, -2, -1, -3; 0, 0, 0, 0, -4, -3, -1
-5, -7, -21; 0, 0, 0, 1, -4, -2, -11, -5, -15; 0, 0, 0, 0, 7, 5, 14, 7, 21; 0
-, 0, 0, 0, 0, 0, -2, -1, -3; 0, 0, 0, 0, 0, 0, 28, 12, 35; 0, 0, 0, 0, 0, 0,
- -7, -3, -9], [0, 0, -1, 0, -2, -1, -6, -2, -4; 0, 0, -1, 0, -1, -1, 0, -1, 
--5; 0, 0, -3, 0, 0, -1, 0, 0, -2; 1, 0, -5, 0, -2, -1, 0, 0, 2; 0, 1, -5, 0,
- -1, -1, 0, 0, 1; 0, 0, 7, 0, 0, 1, 0, 0, 0; 0, 0, 0, 1, -2, 0, 0, 0, 1; 0, 
-0, 0, 0, 7, 0, 0, 1, -7; 0, 0, 0, 0, 0, 1, 0, 0, 2], [0, -1, 0, -4, -4, -5, 
-0, -1, 0; 0, -1, 0, 0, 0, 0, 0, -1, -4; 0, -3, 0, -2, -2, -3, -6, -3, -8; 0,
- -4, -1, -15, -15, -20, 0, -7, -12; 1, -4, 1, -11, -11, -14, 0, -5, -8; 0, 7
-, 0, 14, 14, 19, 0, 7, 14; 0, 0, 0, -2, -3, -3, 0, -1, -1; 0, 0, 0, 28, 28, 
-35, 0, 12, 14; 0, 0, 0, -7, -7, -9, 0, -3, -4], [0, -1, 0, -3, -4, -4, -6, -
-3, -5; 0, 0, -1, 0, -1, -1, 1, -1, -5; 0, -2, -2, -1, -2, -3, -4, -2, -7; 0,
- -3, -4, -10, -11, -14, -4, -7, -14; 0, -2, -3, -7, -8, -10, -3, -5, -10; 1,
- 5, 5, 9, 10, 14, 4, 7, 17; 0, 0, 0, -1, -3, -2, 0, -1, -1; 0, 0, 0, 21, 21,
- 23, 7, 13, 16; 0, 0, 0, -5, -4, -5, -2, -3, -4], [0, -2, 6, -6, 0, -2, 0, -
-2, 0; 0, -1, 1, 0, -6, -4, 0, -1, -2; 0, 0, 2, 0, 0, 0, 0, 0, 2; 0, -2, 17, 
-0, 0, 7, -6, -2, 8; 0, -1, 12, 0, 0, 5, 0, -1, 6; 0, 0, -14, 0, 0, -6, 0, 0,
- -14; 1, -2, 5, 0, 0, 2, 0, 0, 2; 0, 7, -35, 0, 0, -14, 0, 1, -14; 0, 0, 7, 
-0, 0, 3, 0, 0, 4], [0, 0, 1, -3, -1, -2, 0, -1, 0; 0, 0, 0, 1, -1, 0, 1, 0, 
--1; 0, 0, 0, 1, 1, 1, 2, 1, 2; 0, 1, 3, -1, -2, 0, 5, 1, 8; 0, 1, 2, -1, -1,
- 0, 6, 1, 6; 0, -1, -2, 1, 1, 0, -8, -2, -10; 0, 0, 1, 0, -1, 0, 1, 0, 1; 1,
- -2, -9, 4, 6, 1, -5, 1, -9; 0, 1, 2, -1, -1, 0, 1, 0, 3], [0, 1, 3, -10, -2
-, -6, 2, -3, 0; 0, 1, 0, 4, -1, 2, 6, 2, 3; 0, 1, 1, 6, 4, 6, 10, 5, 10; 0, 
-7, 9, -1, -1, 4, 18, 4, 22; 0, 6, 6, -1, 0, 3, 22, 4, 17; 0, -7, -7, 0, 0, -
-4, -28, -7, -28; 0, 1, 2, -1, -1, 0, 4, 0, 2; 0, -14, -21, 14, 7, 0, -14, 3,
- -21; 1, 5, 5, -3, -1, 1, 2, 0, 8]], 0, [9, 3, 3, 0, 0, 3, 0, 3, 12]]
+ 0, 0, 0, 0, 0, 0, 1/7], [1, 0, 0, 0, 0, -2, 0, -1, 3; 0, 1, 0, 0, 0, -2, 0,
+ -4, 18; 0, 0, 1, 0, 0, -6, 0, 0, 8; 0, 0, 0, 1, 0, -5, 0, -4, 27; 0, 0, 0, 
+0, 1, -5, 0, -2, 17; 0, 0, 0, 0, 0, 7, 0, 0, -14; 0, 0, 0, 0, 0, 0, 1, -2, 5
+; 0, 0, 0, 0, 0, 0, 0, 7, -35; 0, 0, 0, 0, 0, 0, 0, 0, 7], [[1, 0, 0, 0, 0, 
+0, 0, 0, 0; 0, 1, 0, 0, 0, 0, 0, 0, 0; 0, 0, 1, 0, 0, 0, 0, 0, 0; 0, 0, 0, 1
+, 0, 0, 0, 0, 0; 0, 0, 0, 0, 1, 0, 0, 0, 0; 0, 0, 0, 0, 0, 1, 0, 0, 0; 0, 0,
+ 0, 0, 0, 0, 1, 0, 0; 0, 0, 0, 0, 0, 0, 0, 1, 0; 0, 0, 0, 0, 0, 0, 0, 0, 1],
+ [0, 1, -1, 2, 2, 2, 3, 3, 3; 1, 1, 1, 2, 2, 4, 18, 7, 14; 0, 1, 0, 6, 6, 8,
+ 8, 8, 10; 0, 0, 0, 6, 5, 7, 27, 12, 20; 0, 0, 0, 4, 4, 5, 17, 8, 13; 0, 0, 
+0, -7, -7, -9, -14, -10, -14; 0, 0, 0, 0, 0, 0, 5, 1, 2; 0, 0, 0, 0, 0, 0, -
+35, -9, -21; 0, 0, 0, 0, 0, 0, 7, 2, 5], [0, -1, 2, 0, -2, 0, -2, -2, -3; 0,
+ 1, -1, 0, -2, -2, -14, -6, -18; 1, 0, 0, 0, -6, -4, -8, -5, -12; 0, 0, 0, 0
+, -4, -3, -23, -11, -31; 0, 0, 0, 1, -4, -2, -15, -7, -20; 0, 0, 0, 0, 7, 5,
+ 14, 8, 21; 0, 0, 0, 0, 0, 0, -2, -1, -3; 0, 0, 0, 0, 0, 0, 28, 12, 35; 0, 0
+, 0, 0, 0, 0, -7, -3, -9], [0, 0, -2, 0, -1, -2, -6, -2, -5; 0, 0, -2, 0, -4
+, -2, 0, -2, -2; 0, 0, -6, 0, 0, -4, 0, 0, -2; 1, 0, -5, 0, -4, -3, 0, -1, 4
+; 0, 1, -5, 0, -2, -3, 0, 0, 2; 0, 0, 7, 0, 0, 4, 0, 0, 0; 0, 0, 0, 1, -2, 0
+, 0, 0, 1; 0, 0, 0, 0, 7, 0, 0, 2, -7; 0, 0, 0, 0, 0, 1, 0, 0, 2], [0, -2, 0
+, -2, -2, -3, 0, -2, 0; 0, -2, 0, -14, -14, -18, 0, -14, -12; 0, -6, 0, -8, 
+-8, -12, -6, -12, -14; 0, -4, -1, -23, -23, -31, 0, -22, -16; 1, -4, 1, -15,
+ -15, -19, 0, -15, -10; 0, 7, 0, 14, 14, 20, 0, 16, 14; 0, 0, 0, -2, -3, -3,
+ 0, -2, -1; 0, 0, 0, 28, 28, 35, 0, 24, 14; 0, 0, 0, -7, -7, -9, 0, -6, -4],
+ [0, -2, 0, -1, -3, -3, -6, -4, -6; 0, 0, -2, -10, -12, -14, -6, -14, -20; 0
+, -4, -4, -4, -8, -12, -8, -10, -18; 0, -3, -4, -15, -18, -23, -12, -22, -29
+; 0, -2, -3, -9, -12, -15, -8, -14, -19; 1, 5, 5, 8, 12, 18, 8, 15, 24; 0, 0
+, 0, -1, -3, -2, 0, -2, -2; 0, 0, 0, 21, 21, 23, 14, 26, 28; 0, 0, 0, -5, -4
+, -5, -4, -6, -7], [0, -1, 3, -6, 0, -2, 0, -4, 0; 0, -4, 18, 0, -6, 10, 0, 
+-4, 6; 0, 0, 8, 0, 0, 6, 0, 0, 8; 0, -4, 27, 0, 0, 22, -6, -4, 12; 0, -2, 17
+, 0, 0, 14, 0, -2, 8; 0, 0, -14, 0, 0, -12, 0, 0, -14; 1, -2, 5, 0, 0, 4, 0,
+ -1, 2; 0, 7, -35, 0, 0, -28, 0, 4, -14; 0, 0, 7, 0, 0, 6, 0, 0, 4], [0, 0, 
+-1, -2, 0, -2, 0, -1, 0; 0, 1, 4, -2, -6, 0, 12, 0, 8; 0, 0, -1, 2, 2, 2, 8,
+ 4, 8; 0, 1, 4, -3, -6, 0, 18, 2, 18; 0, 1, 2, -2, -3, 0, 14, 2, 12; 0, 0, 0
+, 0, 0, -1, -14, -4, -14; 0, 0, 1, 0, -2, 0, 3, 0, 2; 1, -2, -9, 8, 12, 2, -
+20, 2, -18; 0, 1, 2, -2, -2, 0, 4, 0, 5], [0, 0, 1, -8, -1, -5, 4, -4, 1; 0,
+ 8, 10, -2, -4, 8, 16, 4, 16; 0, 4, 4, 6, 4, 10, 22, 12, 22; 0, 11, 15, -5, 
+-3, 12, 22, 6, 28; 0, 8, 9, -3, -1, 8, 24, 6, 20; 0, -7, -7, 0, 0, -8, -28, 
+-10, -28; 0, 1, 2, -1, -1, 1, 4, 0, 2; 0, -14, -21, 14, 7, -11, -14, 2, -21;
+ 1, 5, 5, -3, -1, 4, 2, 1, 8]], 0, [9, 3, 3, 0, 0, 6, 0, 3, 12]]
 norm(u): 1
 norm(t): 1
 trace(u): 1
