@@ -1,9 +1,9 @@
-[[1, 0, 0, 0; 0, 3, 2, 0; 0, 0, 1, 0; 0, 0, 0, 1], [3, 2, 1, 0; 0, 1, 0, 0; 
-0, 0, 1, 0; 0, 0, 0, 1], [1, 0, 0, 0; 0, 3, 1, 1; 0, 0, 1, 0; 0, 0, 0, 1], [
-3, 1, 1, 1; 0, 1, 0, 0; 0, 0, 1, 0; 0, 0, 0, 1]]
-[[3051, 2100, 4200, 2800; 8, 3, 8, 4; 1, 5, 3, 2; 1, 0, 0, 0], [7349, 6300, 
-1400, 2800; 0, 9, 0, 4; 3, 1, 1, 2; 0, 1, 0, 0]]
-[[1, 0, 0, 0; 0, 3, 2, 0; 0, 0, 1, 0; 0, 0, 0, 1], [3, 2, 1, 0; 0, 1, 0, 0; 
-0, 0, 1, 0; 0, 0, 0, 1], [1, 0, 0, 0; 0, 3, 1, 1; 0, 0, 1, 0; 0, 0, 0, 1], [
-3, 1, 1, 1; 0, 1, 0, 0; 0, 0, 1, 0; 0, 0, 0, 1]]
-Total time spent: 320
+[[3, 1, 2, 0; 0, 1, 0, 0; 0, 0, 1, 0; 0, 0, 0, 1], [1, 0, 0, 0; 0, 3, 1, 0; 
+0, 0, 1, 0; 0, 0, 0, 1], [1, 0, 0, 0; 0, 3, 2, 1; 0, 0, 1, 0; 0, 0, 0, 1], [
+3, 2, 1, 1; 0, 1, 0, 0; 0, 0, 1, 0; 0, 0, 0, 1]]
+[[5851, 4900, 1400, 0; 4, 11, 8, 8; 1, 3, 1, 2; 2, 1, 2, 2], [7349, 3500, 70
+00, 0; 0, 9, 4, 8; 3, 5, 5, 2; 0, 1, 2, 2]]
+[[3, 1, 2, 0; 0, 1, 0, 0; 0, 0, 1, 0; 0, 0, 0, 1], [1, 0, 0, 0; 0, 3, 1, 0; 
+0, 0, 1, 0; 0, 0, 0, 1], [1, 0, 0, 0; 0, 3, 2, 1; 0, 0, 1, 0; 0, 0, 0, 1], [
+3, 2, 1, 1; 0, 1, 0, 0; 0, 0, 1, 0; 0, 0, 0, 1]]
+Total time spent: 332
