@@ -94,13 +94,16 @@ x^5 + (14433507922528796322450466885842559554649240/81*y^3 - 206924153900250
 80391464292290112011298779372*y - 405107454421416227846341371795184695887388
 553485545336064626090438935556037611475681610251702629961491235364)
 12
-x^5 + (332998327585787806210715462400*y - 3088099449668699468241894745310)*x
-^3 + (-494543408306584524066234839600325678760597930*y + 4586206898097425895
-941238867752143070004508050)*x^2 + (2641725433827394054586094270775046590304
-97550267984532302200*y - 244983538431631333529289398296106344621995162392003
-4753322415)*x + (-4762910336881280346778626379079140492049923238381537589315
-5745202346081966*y + 4416941339248991457005756136312467537194019159932621869
-49236663342183626850)
+x^5 + (-851144406868559279232996971324725873829107720800*y - 789318851387399
+1842317094186099932000353485209310)*x^3 + (-43598930311479787918633936768341
+9232691384674801616263923073114708639930*y - 4043198465203672254220234791146
+129167056215073195769930655328439910350350)*x^2 + (2194240445634978589987163
+697794653683158447798607957128524354188268092895134005397224513339544600*y +
+ 203485487802052726938585350262826646331621060750721288241946679402110145465
+99006386469739888533585)*x + (4487271766922150403279065006331295700947106495
+64789965265088646961341003482440973587627263428493400548308062454501128034*y
+ + 4161324645204494065844472460463583238903889997974154247351350815735235081
+291291583568531697548194392575994990027027850050)
 13
 x^2 + (579005994260871660725675138161827610313714425601379330908*y^5 - 10665
 838767241026781798972314566336490960682839047298886121*y^4 - 125451512411576
@@ -130,4 +133,4 @@ x^3 - 3*x - 1
 []
 21
 x^5 - 10*x^3 + 5*x^2 + 10*x + 1
-Total time spent: 6584
+Total time spent: 6652
