@@ -346,6 +346,7 @@ BA125- [libpari] Flx_nbfact_Frobenius, FpX_nbfact_Frobenius
   128- [libpari] RgV_kill0
 BA129- factorcantor: use Shoup-Kaltofen algorithm (much faster)
 BA130- [libpari] FpX_dotproduct
+JK131- FpXQ_minpoly: use Shoup algorithm (much faster)
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
